# hotel-pricing-data-platform

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: positive_value.sql  unique_combination.sql
dbt/models/marts/: dim_date.sql  dim_duration_band.sql  dim_property.sql  fct_daily_rates.sql  schema.yml
dbt/models/staging/: schema.yml  sources.yml  stg_rate_observations.sql
dbt/tests/: assert_gap_fill_consistency.sql
src/: export_marts.py  generate_data.py  ingest.py
tests/: test_ingest.py
